--- a/_posts/develop/language/2025-03-31-java_oop1.md
+++ b/_posts/develop/language/2025-03-31-java_oop1.md
@@ -13,7 +13,7 @@ sidebar:
 
 
 # 클래스와 객체 기본 개념
-## 클래스, 객체, 객체지향프로그래밍의 정의
+## 클래스, 객체, 인스턴스
 **[ 클래스(Class) ]**
 > (1) 새로운 자료형(data type)의 정의: a complex data type, 참조 자료형<br>
 (2) 객체(objext)의 `속성, 특성`, `기능/행위`를 정의하는 논리적 구조
@@ -24,33 +24,49 @@ sidebar:
 
 |분류|내용|
 |:---:|---|
-|필드 = 멤버 변수|member variables (class var, instance var)<br>클래스 내부에 선언되는 데이터 저장 공간<br>static/class-wide<br>• class var: static/class-wide-global, 전역<br>• instance var: Local (객체 안, within an object)|
-|메쏘드 = 멤버 함수|methods (= member functions)<br>클래스 내부의 기능(동작)을 정의|
+|필드 = 멤버 변수(member variables)|클래스 내부에 선언되는 데이터 저장 공간<br>• class var: static/class-wide-global, 전역<br>• instance var: Local (객체 안, within an object)|
+|메쏘드(methods) = 멤버 함수(member functions)|클래스 내부의 기능(동작)을 정의|
 
-`참고` 멤버변수와 메서드
+`참고` 멤버변수와 메서드들은 공개(public)혹은 비공개(private)로 선언 가능
 
-ü they are either open public or hidden private
-(공개) (비공개)
+```java
+public class Player{
+	private int age;
+	String name;
+	public int getAge(){
+		return age;
+	}
+}
+```
 
-**[ 인스턴스(instance) ]**
+<br>
+
+**[ 인스턴스(instance) ]**<br>
 • 생성: 객체(object) = 클래스의 인스턴스(instance, 사례)
 
-**[ 객체(Object) ]**
+<br>
+
+**[ 객체(Object) ]**<br>
 > 특징(속성, variable)과 동작(기능, method)의 조합체<br>
 • 메모리 할당을 받는 `실체: instance(인스턴스)`<br>
 • 프로그램 `실행 중에 생성`되는 실체
 
-**[ 객체지향 프로그래밍(object-oriented programming (OOP)) ]**
+<br>
+<br>
+
+## 객체지향 프로그래밍(object-oriented programming (OOP)) 
+**[ 객체지향 프로그래밍의 정의 ]**
 > 특징(속성, variable)과 동작(기능, method)의 조합체<br>
 • `클래스`의 `집합(= program)`을 `설계`하는 작업<br>
 • 컴퓨터 수행작업을 `객체들 사이`의 `상호작용(msg 전달)`으로 표현<br>
 
+<br>
 
-**[ 캡슐화 (Encapsulation) ]**
+**[ 객체지향 프로그래밍의 특징 ]**
+**캡슐화 (Encapsulation)**<br>
 Class design -> encapsulation of information (캡슐화) and
 designation of information visibility (정보 가시성/접근 지정)
 선택적으로 정보 가시성을 제한하는 것
-
 
 ```java
 // 정보 공개
@@ -67,32 +83,13 @@ private functions
 <br>
 
 # 객체 생성과 초기화
-## 생성자(Constructor)의 역할
-**[ Constructor (생성자) ]**
-> 특별한 메쏘드 : 객체를 만들고(instantiation, by ‘new’ 명령),
-또 초기화(initialization)도 수행
-• 생성자 이름 = 클래스 이름
-• return value/type 지정 불필요
-• [동명의] 생성자, 여러 개 있어도 좋다 (‘overloading’ ‘생성
-자 중복’) – 인자 수/형식은 구분되어야 한다
+## 생성자(Constructor)
+**[ 정의 ]**
+> 객체생성과(instantiation, by `new`) 초기화(initialization) 수행하는 특별한 메쏘드
 
-**[ default Constructor (생성자) ]**
-> 별도의 생성자가 없을 때 컴파일러가 자동 만들어 준다
-
-```java
-class Circle {
-  int r, x, y;
-
-  Circle() {} //기본으로 제공
-} 
-```
-
-• 형식만 갖추어 주고 (한 가지 일 외에) 별도의 작업은 없다
-• 기능: 객체 생성 `Circle o = new Circle();`
-
-**[ Initialization (초기화) ]**
-• 변수값 초기화 필요
-• 멤버 변수 선언할 때 동시에 : class default 지정
+• 생성자 이름 = 클래스 이름<br>
+• return value/type 지정 불필요<br>
+• 초기화: 멤버 변수 선언 시 class default 지정 / 미지정 시 default = 0
 
 ```java
 double weight = 430; // soccer ball’s
@@ -100,17 +97,77 @@ int x; // = 0 by default (숫자형)
 ```
 
 
+• 오버로딩(overloading): 이름이 같고, 매개변수의 인자 수나 형식이 다른 생성자를 여러개 만드는 것
+
+```java
+public class Book {
+    String title;
+    String author;
+
+    public Book(String t) {           // 생성자 1
+        title = t;
+        author = "작자미상";
+    }
+
+    public Book(String t, String a) { // 생성자 2 -> 오버로딩
+        title = t;
+        author = a;
+    }
+}
+```
+
+• Default Constructor(기본 생성자): 별도의 생성자가 없을 때(하나도!! 없을 때) 컴파일러가 자동 생성
+
+
+```java
+public class Book {
+    String title;
+    String author;
+
+	/* 컴파일러가 기본생성자를 만들어 줌
+	public Book(){	
+		super();	//Object 클래스의 생성자 호출
+	}
+	*/
+}
+
+/*기능
+1) 빈 객체 생성 - 값은 나중에 할당
+2) 기본값을 가진 상태로 객체 생성 후 수정
+3) 해당 객체 타입 배열을 생성할 때 내부적으로 기본 생성자가 필요함
+*/
+Book b = new Book();	//직접 멤버변수 값을 지정할 수는 없음
+b.title = "어린왕자";		//객체 생성 후 수동으로 값 할당은 가능
+b.author = "생택쥐페리";
+```
+
+
+
+**[ 생성자 사용 예시 ]**
+
+`생성자 체이닝`
+> 하나의 생성자 안에서 자기 클래스의 다른 생성자를 호출하는 것: by `this(...)
+
+• 생성자끼리만 호출 가능
+• 반드시 생성자의 첫 줄에 있어야 함: 실행 순서상 생성자 체이닝에서 사용하는 생성자가 먼저 생성되어야 함
+• `this()`와 `super()`는 동시에 못 씀
+
 ```java
 class Box {
     double width; // 멤버 변수, (0 초기화)
     double height;
     double depth;
     default size
+
     Box() {
         width = height = depth = 10;
     }
-    Box(int x) { this(x, x, x); }   //this: 나의 참조변수 or 나의 생성자 호출(아래 box 호출-파라미터의 수를 맞춰서)
-    Box(double w, height h, depth d) {
+    Box(int x) { 
+		// 생성자 체이닝, 자동 형변환(int -> double)
+		//this: 나의 참조변수 or 나의 생성자 호출(아래 box 호출-파라미터의 수를 맞춰서)
+		this(x, x, x); 	
+	}   
+    Box(double w, double h, double d) {
         width = w; height = h; depth = d;
     }
 }
@@ -145,21 +202,53 @@ public class Book {
 ```
 
 
-
-- 생성자 오버로딩
-- 생성자 예제 (Box, Book 클래스 등)
-- 기본 생성자(Default constructor)의 의미
-
-<br>
 <br>
 <br>
 
-# 접근 제어자 & 예약어
-**[ `public`, `private`, `protected` 접근 범위 ]**
-– controls the visibility(가시성) of variables
-• open to or hidden from – outside/other objects
-– “information hiding(정보은닉)” ¬ private variables
 
+## 접근제어자
+**[ 정의 ]**
+> 클래스의 멤버(변수, 메서드 등)에 접근할 수 있는 권한을 제어하는 도구
+
+캡슐화: information hiding(정보은닉)<br>
+• controls the visibility(가시성) of variables<br>
+• open to or hidden from – outside/other objects<br>
+
+
+|접근제어자|같은 클래스|같은 패키지|하위 클래스|외부|
+|:---:|:---:|:---:|:---:|
+|`public`|✅|✅|✅|✅|
+|`protected`|✅|✅|✅|❌|
+|`(defalt)`|✅|✅|❌|❌|
+|`private`|✅|❌|❌|❌|
+
+**public** <br>
+• 완전 공개<br>
+• 어디에서든 접근 가능 (같은 클래스, 패키지, 하위 클래스, 외부 클래스)<br>
+• 자주 쓰는 곳: main() 메서드, 라이브러리 API
+
+**protected** <br>
+• 상속 중심 보호<br>
+• 같은 패키지 + 다른 패키지의 하위 클래스에서 접근 가능<br>
+• 주로 상속받는 클래스에서 사용함
+
+**(default)**<br>
+• 패키지 전용<br>
+• 접근 제어자를 아예 안 쓰면 default로 간주<br>
+• 같은 패키지 안에서만 접근 가능<br>
+• 외부 클래스나 다른 패키지에서는 접근 불가
+
+**private** <br>
+• 완전 감춤<br>
+• 같은 클래스 내부에서만 접근 가능<br>
+• 외부, 하위 클래스에서도 절대 접근 불가<br>
+• 주로 멤버 변수에 사용해서 정보 은닉
+
+
+<br>
+<br>
+
+## this, super
 **[ `this` 키워드 (자기 참조) ]**
 – this. : 명시적 self-reference (자기 참조, 자기 지칭)
 anywhere : this.name
