posting structure update

--- a/_posts/develop/language/2025-03-31-java_oop1.md
+++ b/_posts/develop/language/2025-03-31-java_oop1.md
@@ -314,7 +314,7 @@ inside its constructor super.job
 <br>
 <br>
 
-# 메서드 오버로딩
+## 메서드 오버로딩
 **[ 메서드 오버로딩 개념 ]**
 Two or more methods of
 – the same name
@@ -354,7 +354,7 @@ Box c = new Box(10);
 <br>
 <br>
 
-# 인자 전달 방식
+## 인자 전달 방식
 Transmitting actual arguments to formal
 parameters of a method
 a.set(RED) void set(int sack){…}
@@ -408,8 +408,8 @@ class Ref {
 <br>
 <br>
 
-# 정적 멤버 (Static)
-## 클래스 변수/메서드 (`static`)
+## 정적 멤버 (Static)
+ 클래스 변수/메서드 (`static`)
 **[ static members ]**
 > 특정 객체와 무관한, 일종의 전역 변/함수
 • variables/methods common to all objects of a class
@@ -461,35 +461,40 @@ int d = Calcs.getMagic(); // error -> ?
 <br>
 <br>
 
+
+
 # 중첩 클래스 (Nested Class)
 
 ## 정의
-> class 안에 class를 정의한 것
-• nested class는 외부 class 안에서[만] 존재 유효
-• 외부 class의 모든 변수를 access한다
-– 외부 class는 nested class의 멤버를 access하지 못함
+> class 안에 class를 정의한 것, 클래스 안에 선언된 또 다른 클래스
+• nested class(내부)는 외부 class의 범위 안에서만 유효
+• 내부클래스는 외부클래스의 모든 변수에 접근 가능
+• 외부클래스는 내부클래스의 멤버에는 접근할 수 없음
 
-## 중첩 클래스 사용이유
- Compelling reasons for using :
-(1) It’s a way of logically grouping classes that are only
-used in one place
+<br>
+
+## 중첩 클래스 사용이유(Compelling reasons)
+
+(1) It’s a way of `logically grouping` classes that are only
+used in one place<br>
 • Logical if useful only to one other class – kinda “helper
-classes” – and makes it more streamlined
-(2) It increases encapsulation
-• Hidden from the outside world
-(3) It can lead to more readable and maintainable code
- put related small classes close to where they are neededㅍ
+classes” – and makes it more streamlined<br>
+(2) It increases `encapsulatio`n<br>
+• Hidden from the outside world<br>
+(3) It can lead to more `readable and maintainable` code<br>
+• put related small classes close to where they are needed
 
-## 두 가지 유형– 총 4 가지가 있다:
-1. static nested class/interface = “top-level
-class/interface”
+<br>
+
+## 중첩 클래스의 유형
+**[ static nested class/interface =`top-level class/interface` ]**<br>
+> 
 : 내부에 있긴 있는데, 밖에 있어도 상관없는 클래스 > static을 쓴다
 
-2. non-static nested class = “inner class” - 3가지:
-• includes member class, local class, anonymous class
+**[ non-static nested class = `inner class` ]** <br>
+• 종류: member class, local class, anonymous class<br>
 : 멤버변수, 생성자, 멤버함수, 클래스
-: 함수안에 클래스가 들어감(메소드 안에)
-: 
+
 
 ```java
 //(1) Static nested class
