--- a/_posts/develop/language/2025-03-31-java_oop1.md
+++ b/_posts/develop/language/2025-03-31-java_oop1.md
@@ -11,6 +11,9 @@ sidebar:
 ---
 
 
+<br>
+<br>
+<br>
 
 # 클래스와 객체 기본 개념
 ## 클래스, 객체, 인스턴스
@@ -466,76 +469,103 @@ int d = Calcs.getMagic(); // error -> ?
 # 중첩 클래스 (Nested Class)
 
 ## 정의
-> class 안에 class를 정의한 것, 클래스 안에 선언된 또 다른 클래스
-• nested class(내부)는 외부 class의 범위 안에서만 유효
-• 내부클래스는 외부클래스의 모든 변수에 접근 가능
+> class 안에 class를 정의한 것, 클래스 안에 선언된 또 다른 클래스<br>
+• nested class(내부)는 외부 class의 범위 안에서만 유효<br>
+• 내부클래스는 외부클래스의 모든 변수에 접근 가능<br>
 • 외부클래스는 내부클래스의 멤버에는 접근할 수 없음
 
 <br>
 
 ## 중첩 클래스 사용이유(Compelling reasons)
 
-(1) It’s a way of `logically grouping` classes that are only
-used in one place<br>
-• Logical if useful only to one other class – kinda “helper
-classes” – and makes it more streamlined<br>
-(2) It increases `encapsulatio`n<br>
-• Hidden from the outside world<br>
-(3) It can lead to more `readable and maintainable` code<br>
-• put related small classes close to where they are needed
+(1) 한 곳에서만 사용되는 클래스들을 논리적으로 그룹화(logically grouping)하는 방법<br>
+• 특정 다른 클래스에만 유용하다면 논리적인 선택이다 – 일종의 “보조 클래스(helper classes)” 같은 것 – 그리고 코드를 더 간결하게 만든다<br>
+(2) 캡슐화(encapsulation)를 향상<br>
+• 외부 세계로부터 숨겨진다 (Hidden from the outside world)
+<br>
+(3) 더 읽기 쉽고 유지보수 가능한(readable and maintainable) 코드로 이어질 수 있다<br>
+• 관련된 작은 클래스들을 그들이 필요한 곳 근처에 배치할 수 있다
 
 <br>
 
 ## 중첩 클래스의 유형
-**[ static nested class/interface =`top-level class/interface` ]**<br>
-> 
-: 내부에 있긴 있는데, 밖에 있어도 상관없는 클래스 > static을 쓴다
+
+|종류|선언위치|static 여부|사용 조건|
+|---|---|---|---|
+|Static Nested Class|클래스 내부|✅ static|외부 객체 없이 생성 가능|
+|Member Class|클래스 내부|❌ non-static|외부 객체 필요|
+|Local Class|메서드 내부|❌ non-static|지역 범위 내에서만 사용|
+|Anonymous Class|메서드 내부|❌ non-static|이름 없이 즉석에서 생성, 주로 일회용|
+
+**[ static nested class/interface = `top-level class/interface` ]**<br>
+
+
 
 **[ non-static nested class = `inner class` ]** <br>
-• 종류: member class, local class, anonymous class<br>
-: 멤버변수, 생성자, 멤버함수, 클래스
+• member class: 클래스 안에 선언된 내부 클래스<br>
+• local class<br>
+• anonymous class<br>
 
+**[ Static Nested Class ]**<br>
+• 외부 클래스와 덜 밀접한 관계일 때 사용<br>
+• 내부에 있지만 밖에 있어도 상관없음(외부 클래스의 인스턴스 없이 생성 가능)<br>
+• static으로 선언된 중첩 클래스<br>
 
 ```java
-//(1) Static nested class
 class OuterClass {
-...
-	static class StaticNestedClass {	//정적 중첩 클래스
-	...
-	}
-	class InnerClass {	//멤버 클래스
-	...
-	}
-	void anyMethod(...) {
-	...
+
+	static int num1;
+	int num2;
+
+	//정적 중첩 클래스
+	static class StaticNestedClass {	
+		//num1에는 접근 가능
+		System.out.println(num1);
+
+		//num2에는 불가능 > 인스턴스 생성 후 가능
+		OuterClass outer = new OuterClass();  // 외부 인스턴스 생성
+        System.out.println(outer.num2);       // 이제 접근 가능
 	}
 }
 
-//Usage:
+// Usage: 외부객체 없이 new로 직접 생성 가능
 OuterClass.StaticNestedClass nestedObject = new OuterClass.StaticNestedClass();
 ```
+
+**[ Member Class - 멤버 클래스 (non-static) ]**<br>
+• 외부 클래스의 인스턴스가 있어야 생성 가능<br>
+• 외부 클래스의 모든 멤버(심지어 private도!) 접근 가능<br>
+• non-static 이기 때문에 외부 인스턴스에 종속됨<br>
 
 ```java
 //(2) member class – a member
 class OuterA {
 	int outX = 10;
+
 	void test() {
-		InnerB in = new InnerB();
-		in.innerDisplay();
+		InnerB in = new InnerB();	//내부 클래스 생성
+		in.innerDisplay();			//내부 메서드 호출
 	}
 	class InnerB { // 멤버 클래스
 		int inX = 11;
 		void innerDisplay() {
-		System.out.println(“InnerB: outX = “ + outX);
+			System.out.println(“InnerB: outX = “ + outX);
+		}
 	}
 }
 
-//Cf
-OuterClass.InnerClass innerObject = outerObject.new InnerClass();
+//
+OuterA outerObject = new OuterA();
+OuterA.InnerB innerObject = outerObject.new InnerB();
 ```
 
+**[ Local Class - 지역 클래스 (메서드 안에서 선언) ]**<br>
+• 메서드 내부에서 선언되는 클래스<br>
+• 클래스 정의와 사용이 지역적으로 이뤄짐<br>
+• 주로 임시로 필요한 클래스, 캡슐화 강화<br>
+
+
 ```java
-//(3) Local class – inside a method
 class Outer {
 	int i = 100; // 비-정적 멤버 변수
 	static void classMethod() { // 정적 메쏘드
@@ -562,6 +592,30 @@ Outer$1.LocalNonStatic.class
 */
 ```
 
+**[ Anonymous Class — 익명 클래스 ]**<br>
+• 이름 없는 일회용 클래스<br>
+• 인터페이스나 추상 클래스를 즉석에서 구현할 때 사용<br>
+• 자바 GUI나 이벤트 리스너에서 많이 사용됨
+
+```java
+//(4) Anonymous class – 익명
+interface ActionListener {// 인터페이스
+	public void actionPerformed(ActionEvent e);
+}
+ActionListener aL = new ActionListener() {
+	public void actionPerformed(ActionEvent e) {
+		System.out.println(“Q!”);
+	}
+}
+```
+
+
+**[ Deep Nesting – 중첩 클래스 안의 중첩 클래스 ]**<br>
+• 클래스가 클래스 안에 또 있는 구조<br>
+• 내부 클래스는 바깥 클래스의 인스턴스 변수에 자유롭게 접근 가능<br>
+• 객체 생성 시 바깥 객체가 먼저 생성되어야 함
+
+
 ```java
 //Deep nesting – member classes
 
@@ -579,14 +633,4 @@ class WithDeepNesting {
 }
 ```
 
-```java
-//(4) Anonymous class – 익명
-interface ActionListener {// 인터페이스
-	public void actionPerformed(ActionEvent e);
-}
-ActionListener aL = new ActionListener() {
-	public void actionPerformed(ActionEvent e) {
-		System.out.println(“Q!”);
-	}
-}
-```
+
