--- a/_posts/develop/language/2025-03-31-java_oop1.md
+++ b/_posts/develop/language/2025-03-31-java_oop1.md
@@ -412,18 +412,24 @@ class Ref {
 <br>
 
 ## 정적 멤버 (Static)
- 클래스 변수/메서드 (`static`)
 **[ static members ]**
-> 특정 객체와 무관한, 일종의 전역 변/함수
-• variables/methods common to all objects of a class
-“class variables”, “class methods”
+> 특정 객체와 무관한, 일종의 전역 변/함수<br>
+• 객체(instance)가 아니라, 클래스 자체에 속함<br>
+• variables/methods common to all objects of a class<br>
+• 종류: `class variables`, `class methods`
 
 |구분|내용|
 |---|---|
-|static variables|(사본 없음->같은 타입의 모든 객체가 공유)<br>• global variables, not duplicated/copied<br>• object instances share them|
-|static methods|(객체 없이도, 클래스 이름으로 호출가능)<br>used without object instantiation<br>1) can invoke only other static methods<b>2) can
+|static variables|사본 없음->같은 타입의 모든 객체가 공유<br>• global variables, not duplicated/copied<br>• object instances share them|
+|static methods|객체 없이도, 클래스 이름으로 호출가능<br>used without object instantiation<br>1) can invoke only other static methods<br>2) can
 access only static variables<br>3) cannot use this/super|
 
+**[ 왜 static이 필요한가? ]**<br>
+• 여러 객체가 같은 값을 공유해야 할 때
+• 객체 없이도 사용할 수 있음: `Math.PI`, `Math.square(5)``
+• 메모리 절약: 객체마다 따로 복사할 필요 없이, 딱 1개만 메모리에 존재함
+
+**[ 예시 ]**<br>
 
 ```java
 double y = Math.sqrt(2);	//-> y = 1.414…
@@ -432,10 +438,10 @@ System.out.println("abs value is = " + Math.abs(-5));
 
 final 의미, extends 의미
 public final class Math extends Object {
-static double E = 2.71828…;
-static double PI = 3.1415…;
-static double abs(double a) { … }
-static double random(double a) { … }
+	static double E = 2.71828…;
+	static double PI = 3.1415…;
+	static double abs(double a) { … }
+	static double random(double a) { … }
 …
 }
 ```
@@ -456,9 +462,6 @@ int c = Calcs.sum(5, Calcs.magic);
 int d = Calcs.getMagic(); // error -> ?
 ```
 
-
-
-- 왜 static이 필요한가?
 
 <br>
 <br>
@@ -490,6 +493,13 @@ int d = Calcs.getMagic(); // error -> ?
 
 ## 중첩 클래스의 유형
 
+**[ static nested class/interface = `top-level class/interface` ]**<br>
+
+**[ non-static nested class = `inner class` ]** <br>
+• member class: 클래스 안에 선언된 내부 클래스<br>
+• local class<br>
+• anonymous class<br>
+
 |종류|선언위치|static 여부|사용 조건|
 |---|---|---|---|
 |Static Nested Class|클래스 내부|✅ static|외부 객체 없이 생성 가능|
@@ -497,14 +507,8 @@ int d = Calcs.getMagic(); // error -> ?
 |Local Class|메서드 내부|❌ non-static|지역 범위 내에서만 사용|
 |Anonymous Class|메서드 내부|❌ non-static|이름 없이 즉석에서 생성, 주로 일회용|
 
-**[ static nested class/interface = `top-level class/interface` ]**<br>
 
-
-
-**[ non-static nested class = `inner class` ]** <br>
-• member class: 클래스 안에 선언된 내부 클래스<br>
-• local class<br>
-• anonymous class<br>
+<br>
 
 **[ Static Nested Class ]**<br>
 • 외부 클래스와 덜 밀접한 관계일 때 사용<br>
