--- a/_posts/develop/language/2025-03-31-java_oop1.md
+++ b/_posts/develop/language/2025-03-31-java_oop1.md
@@ -363,9 +363,9 @@ parameters of a method
 a.set(RED) void set(int sack){…}
 
 **[ Call-by-Value ]**
-> 값에 의한 호출
-• 실인자의 값을 (복사하여) 전달한다/넘긴다
-• 복귀했을 때 실인자 값은 변치 않는다
+> 값에 의한 호출<br>
+• 실인자의 값을 (복사하여) 전달한다/넘긴다<br>
+• 복귀했을 때 실인자 값은 변치 않는다<br>
 • built-in type data : primitive type
 
 ```java
@@ -385,8 +385,8 @@ class Value {
 
 
 **[ Call-by-Reference ]**
-> 참조에 의한 호출
-• 참조reference를 전달한다
+> 참조에 의한 호출<br>
+• 참조reference를 전달한다<br>
 • 실인자의 내용이 변한다/변할 수 있다
 
 ```java
