--- a/_posts/develop/language/2025-03-31-java_oop1.md
+++ b/_posts/develop/language/2025-03-31-java_oop1.md
@@ -100,24 +100,6 @@ int x; // = 0 by default (숫자형)
 ```
 
 
-• 오버로딩(overloading): 이름이 같고, 매개변수의 인자 수나 형식이 다른 생성자를 여러개 만드는 것
-
-```java
-public class Book {
-    String title;
-    String author;
-
-    public Book(String t) {           // 생성자 1
-        title = t;
-        author = "작자미상";
-    }
-
-    public Book(String t, String a) { // 생성자 2 -> 오버로딩
-        title = t;
-        author = a;
-    }
-}
-```
 
 • Default Constructor(기본 생성자): 별도의 생성자가 없을 때(하나도!! 없을 때) 컴파일러가 자동 생성
 
@@ -183,24 +165,24 @@ Box c = new Box(10, 20, 30);
 
 ```java
 public class Book {
-  String title;
-  String author;
+    String title;
+    String author;
 
-  //생성자 중복
-  public Book(String t) { // 생성자 1
-    title = t; author = "작자미상"; // 변수 초기화
-  }
+    //생성자 중복
+    public Book(String t) { // 생성자 1
+        title = t; author = "작자미상"; // 변수 초기화
+    }
 
-  public Book(String t, String a) { // 생성자 2
-    title = t; author = a; // 변수 초기화
-  }
+    public Book(String t, String a) { // 생성자 2
+        title = t; author = a; // 변수 초기화
+    }
 
-  public static void main(String [] args) {
-    Book littlePrince = new Book("어린왕자", "생텍쥐페리");// --> 생성자 2 호출
-    Book loveStory = new Book("춘향전");            // --> 생성자 1 호출
-    System.out.println (littlePrince.title + " " + littlePrince.author);
-    System.out.println (loveStory.title + " " + loveStory.author);
-  }
+    public static void main(String [] args) {
+        Book littlePrince = new Book("어린왕자", "생텍쥐페리");// --> 생성자 2 호출
+        Book loveStory = new Book("춘향전");            // --> 생성자 1 호출
+        System.out.println (littlePrince.title + " " + littlePrince.author);
+        System.out.println (loveStory.title + " " + loveStory.author);
+    }
 }
 ```
 
@@ -252,12 +234,17 @@ public class Book {
 <br>
 
 ## this, super
-**[ `this` 키워드 (자기 참조) ]**
-– this. : 명시적 self-reference (자기 참조, 자기 지칭)
-anywhere : this.name
-inside its method/생성자
-– this(…) : only called first inside a constructor
-calls another constructor
+**[ `this` 키워드 (자기 참조) ]**<br>
+• this.* : 명시적 self-reference (자기 참조, 자기 지칭)<br>
+👉 어디서든 사용 가능(메서드나 생성자 내부 등)<br>
+• this(…) : 생성자 내부에서 처음(first) 에만 호출 가능<br>
+👉 다른 생성자를 호출할 때 사용
+
+**[ `super` 키워드 (상위 클래스 참조) ]**<br>
+• super.* : parent class reference (상위 클래스 객체 참조)<br>
+• super(…) : 생성자 내부에서 처음(first) 에만 호출 가능<br>
+👉 생성자 안의 첫 문장에서만 사용 가능
+
 
 ```java
 public class Balloon {
@@ -306,24 +293,35 @@ public class Book {
 
 ```
 
-**[ `super` 키워드 (상위 클래스 참조) ]**
-– super.
-- : parent class reference (상위 클래스 객체 참조)
-– super(…) : only called first inside a constructor
-inside its constructor super.job
-(첫 문장) - 5장에서!
+
 
 <br>
 <br>
 <br>
 
 ## 메서드 오버로딩
-**[ 메서드 오버로딩 개념 ]**
-Two or more methods of
-– the same name
-– different number/type of input arguments, but
-– the same return value type
-• a way of realizing polymorphism (다형성, 한 객체 여러 모습/동작)
+**[ 메서드 오버로딩(Method Overloading) 개념 ]**
+> 이름은 같지만, 매개변수의 수나 타입이 다른 두 개 이상의 메소드를 정의하는 것<br>
+• 반환형의 타입은 동일해야 함<br>
+• 다형성(polymorphism, 하나의 객체가 여러 모습으로 동작)을 실현하는 방법 
+
+
+```java
+public class Book {
+    String title;
+    String author;
+
+    public Book(String t) {           // 생성자 1
+        title = t;
+        author = "작자미상";
+    }
+
+    public Book(String t, String a) { // 생성자 2 -> 오버로딩
+        title = t;
+        author = a;
+    }
+}
+```
 
 ```java
 //Animal.java
@@ -369,11 +367,13 @@ a.set(RED) void set(int sack){…}
 • built-in type data : primitive type
 
 ```java
-public class CBV { public static void main(String a[]) { Value obj = new Value();
-	int a = 10;
-	System.out.println(a); // -> output: 10
-	obj.treat(a); 			// a = 실(제)인자
-	System.out.println(a); // -> output: 10
+public class CBV { 
+    public static void main(String a[]) { 
+        Value obj = new Value();
+        int a = 10;
+        System.out.println(a); // -> output: 10
+        obj.treat(a); 			// a = 실(제)인자
+        System.out.println(a); // -> output: 10
 	}
 }
 class Value {
@@ -624,16 +624,16 @@ ActionListener aL = new ActionListener() {
 //Deep nesting – member classes
 
 class WithDeepNesting {
-	boolean toBe;
-	WithDeepNesting(boolean b) { toBe = b;}
-	class NestedC {
-		boolean theQuestion;
-		class DeeplyNesteD {
-			DeeplyNesteD() { 
-				theQuestion = toBe || !toBe; 
-			}
-		}
-	}
+    boolean toBe;
+    WithDeepNesting(boolean b) { toBe = b;}
+    class NestedC {
+        boolean theQuestion;
+        class DeeplyNesteD {
+            DeeplyNesteD() { 
+                theQuestion = toBe || !toBe; 
+            }
+        }
+    }
 }
 ```
 
