--- a/_posts/develop/ds_ai/2025-03-24-al6.md
+++ b/_posts/develop/ds_ai/2025-03-24-al6.md
@@ -1,6 +1,6 @@
 ---
-title: "[알고리즘] 최소신장트리와 알고리즘"
-excerpt: "크루스칼 알고리즘, "
+title: "[알고리즘] 탐욕 알고리즘과 탐욕 알고리즘의 적용"
+excerpt: "크루스칼/프림 알고리즘, 다익스트라 알고리즘, "
 categories:
   - ds_ai
 tags: [알고리즘]
@@ -15,44 +15,33 @@ sidebar:
 <br>
 <br>
 
+# Greedy Algorithm
+## Greedy 알고리즘의 개념
+**[ 개념 - Local Optimization Approach ]**  
+> 지엽적인 방법을 가고 최적화된(라고 믿는)값을 선택하는 방법
+> • 일련의 선택들을 수행하며, 각 선택은 그 순간 가장 좋아 보이는 것을 선택함  
+> • 각 선택은 **국소적으로 최적**일 수 있으나, **전역적으로 최적**은 아닐 수 있음
 
-# Minimum Spanning Tree(최소 신장 트리)
-## Undirected Graph
-**[ 정의 ]**
-> 무방향 그래프 $G$는 유한한 정점 집합 $V(vertex)$과, 간선 집합 $E(edge)$로 구성<br>
-• 정점: $G$의 정점이라 불림
-• 간선: 정점들의 쌍들로 구성된 집합, $G$의 간선이라고 부름<br> 
-• 표기: $G = (V, E)$
+<br>
 
-**[ 예시 ]**
-![graph1](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1.png)
-• $|E| = 7$, $|V| = 5$
-• 직접적으로 연결된 노드: 이웃
-• 그래프에는 순환은 있어서 트리는 아님
+**[ 예시: Exchanges Greedy Algorithm ]**
 
-$V = {v_1, V_2, V_3, V_4, V_5}$
-$E = {(V_1, V_2), (V_1, V_3), (V_2, V_3), (V_2, V_4), (V3, V_4), (V_3, V_5), (V_4, V_5)}$
+```c
+while (there are more coins and the instance is not solved){
+    grab the largest remaining coin;            // selection procedure
+    if (adding the coin makes the change exceed the amount owed)  // feasibility check
+        reject the coin;
+    else
+        add the coin to the change;
+    if (the total value of the change equals the amount owed)     // solution check
+        the instance is solved;
+}
+```
 
+|최적의 방법|최적이 아닌 방법|
+|---|---|
+|||
 
-## Tree Structure
-**[ 정의 ]**
-> • 그래프에서 일부 엣지를 제거하여 **순환 구조를 없애고** 연결성을 유지한 서브그래프
-> • 트리는 **모든 정점을 포함하고** 사이클이 없는 연결된 구조  
-> • 메시지 전파, 네트워크 연결 등에서 선호됨: 비용이 줄어듦
-
-**[ 예시 ]**
-![graph2&3](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_2&3.png)
-• (c) 스패닝 트리: weight = 15  
-• (d) 최소 스패닝 트리: weight = 10
-
-
-## Minimum Spanning Tree
-**[ 스패닝 트리 정의 ]**
-> 그래프 $G$의 **모든 정점을 포함하고 연결된** 부분 그래프이며 **트리**
-> • 최소 가중치를 갖는 연결된 부분 그래프는 스패닝 트리여야 함
-> • 하지만 모든 스패닝 트리가 최소 가중치를 가지는 것은 아님
-
-**[ 탐욕적(greedy) 접근 방식 사용 ]**
 
 ```c
 F = ∅               // Initialize set of
@@ -66,6 +55,48 @@ while (the instance is not solved){
 }
 ```
 
+<br>
+<br>
+
+
+# 탐욕 알고리즘의 적용 예시
+> 이 글에서는 `크루스칼 알고리즘`, `프림 알고리즘`, `다익스트라 알고리즘` 의 탐욕 알고리즘의 사용 예시를 다룬다!
+
+
+## `참고` Minimum Spanning Tree(최소 신장 트리)
+**[ Undirected Graph ]**<br>
+> 무방향 그래프 $G$는 유한한 정점 집합 $V(vertex)$과, 간선 집합 $E(edge)$로 구성<br>
+• 정점: $G$의 정점이라 불림<br>
+• 간선: 정점들의 쌍들로 구성된 집합, $G$의 간선이라고 부름<br> 
+• 표기: $G = (V, E)$
+
+**` 예시 `**
+![graph1](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1.png)
+• $|E| = 7$, $|V| = 5$
+• 직접적으로 연결된 노드: 이웃
+• 그래프에는 순환은 있어서 트리는 아님
+
+$V = {v_1, V_2, V_3, V_4, V_5}$
+$E = {(V_1, V_2), (V_1, V_3), (V_2, V_3), (V_2, V_4), (V3, V_4), (V_3, V_5), (V_4, V_5)}$
+
+**[ Tree Structure ]**
+> • 그래프에서 일부 엣지를 제거하여 **순환 구조를 없애고** 연결성을 유지한 서브그래프
+> • 트리는 **모든 정점을 포함하고** 사이클이 없는 연결된 구조  
+> • 메시지 전파, 네트워크 연결 등에서 선호됨: 비용이 줄어듦
+
+**` 예시 `**
+![graph2&3](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_2&3.png)
+• (c) 스패닝 트리: weight = 15  
+• (d) 최소 스패닝 트리: weight = 10
+
+
+**[ Minimum Spanning Tree ]**
+> 그래프 $G$의 **모든 정점을 포함하고 연결된** 부분 그래프이며 **트리**
+> • 최소 가중치를 갖는 연결된 부분 그래프는 스패닝 트리여야 함
+> • 하지만 모든 스패닝 트리가 최소 가중치를 가지는 것은 아님
+
+
+
 
 <br>
 <br>
@@ -73,8 +104,8 @@ while (the instance is not solved){
 
 
 
-# Kruskal Algorithm (크루스칼 알고리즘)
-## Kruskal 알고리즘이란?
+## Kruskal Algorithm (크루스칼 알고리즘)
+### Kruskal 알고리즘이란?
 **[ 정의 ]**
 > **최소 신장 트리(MST, Minimum Spanning Tree)**를 구하는 대표적인 **Greedy Algorithm(탐욕 알고리즘)**
 > • **그래프의 모든 정점을 최소한의 간선으로 연결하면서, 전체 간선 가중치의 합이 최소**가 되도록 구성
@@ -91,36 +122,35 @@ while (the instance is not solved){
 
 <br>
 
-## 동작 예시 (How it works)
+### 동작 예시 (How it works)
 
-1. **초기 그래프 주어짐**
+**[ 초기 그래프 주어짐 ]**<br>
 
-2. **간선들을 가중치 기준으로 정렬**  
-   ```
-   sort → (v2,v3), (v1,v2), (v3,v5), (v2,v5), (v1,v4), (v3,v4)
-   ```
+**[ 간선들을 가중치 기준으로 정렬 ]**  <br>
 
-3. **서로소 집합 초기화**  
-   - 정점 수 \( N \)
-   - 간선 수 \( |E| \) = 1부터 시작 → \( |E| = N - 1 \)이 될 때까지
+```
+sort → (v2,v3), (v1,v2), (v3,v5), (v2,v5), (v1,v4), (v3,v4)
+```
 
-4. **각 단계에서**  
-   - 최소 가중치 간선 선택  
-   - 사이클 없으면 추가  
-   - 사이클 생기면 무시  
-   - 이 과정을 반복
+**[ 서로소 집합 초기화 ]**  <br>
+• 정점 수 \( N \)
+• 간선 수 \( |E| \) = 1부터 시작 → \( |E| = N - 1 \)이 될 때까지
 
-5. **모든 정점이 연결된 하나의 집합이 되면 완료**
+**[ 각 단계에서 반복 ]**  <br>
+• 최소 가중치 간선 선택  <br>
+• 사이클 없으면 추가, 사이클 생기면 무시  
 
-📌 아래 요약:
-- 서로소 집합: \( V = \{V_1, V_2, ..., V_5\} \)  
-- 예: \( \{v1\}, \{v2\}, ... \) → \( \{v1, v2\} \)로 병합됨
+**[ 모든 정점이 연결된 하나의 집합이 되면 완료 ]**<br> 
+
+📌 아래 요약:<br>
+• 서로소 집합: $V = \{V_1, V_2, ..., V_5\}$ <br>
+• 예: $\{v1\}, \{v2\}, ... \) → \( \{v1, v2\}$로 병합됨
 
 ---
 
 
 
-## 알고리즘 개요 (Overview)
+### 알고리즘 개요 (Overview)
 
 ```c
 F = ∅;                             // 간선 집합 초기화
@@ -143,11 +173,11 @@ while (the instance is not solved){          // 해결되지 않았다면 반복
         the instance is solved;             // 해결 완료
 }
 
-//또는 “간선의 수 \( |F| = |V| - 1 \)”이 되면 종료해도 됨
+//또는 간선의 수|F| = |V| - 1이 되면 종료해도 됨
 ```
 
 
-## Kruskal 알고리즘 코드 (의사코드)
+### Kruskal 알고리즘 코드 (의사코드)
 
 ```cpp
 void kruskal(int n, int m,
@@ -176,23 +206,125 @@ void kruskal(int n, int m,
 }
 ```
 
-🧠 연산:
-- 정렬: \( m \log m \)  
-- Union-Find 연산: \( \log n \)  
-- 따라서 전체 시간복잡도:  
-  \[
-  \Theta(m \log m + n)
-  \]
 
----
+**[ 시간복잡도 분석 (Analysis) ]**
+> 간선 정렬이 Kruskal의 핵심 시간 소모 요소  
+$W(m) \in \Theta(m \log m)$
 
-### 🟩 4. 시간복잡도 분석 (Analysis)
-
-- 간선 정렬이 Kruskal의 핵심 시간 소모 요소  
-  \[
-  W(m) \in \Theta(m \log m)
-  \]
-
-- 여기서 \( m \)은 간선 수, \( n \)은 정점 수  
+- 여기서 $m$은 간선 수, $n$은 정점 수  
 - 크루스칼 알고리즘은 **가중치 기준 정렬 + 유니온 파인드**가 핵심
 
+
+<br>
+<br>
+<br>
+
+## Prim's Algorithm(프림 알고리즘)
+
+### 프림 알고리즘의 개요
+**[ 그래프로 프림 알고리즘의 진행과정 알아보기 ]**<br>
+
+|단계별 이미지|설명|집합|
+|:---:|:---:|:---:|
+||최소신장트리 결정하기|$V={v_1, v_2, v_3, v_4, v_5}$<br>$Y={}$|
+||정점 $v_1$을 처음으로 선택||
+
+
+**[ 가중치 그래프를 인접행렬로 표현하기 ]**<br>
+
+```c
+int adjacency_matrix[][] = 
+{
+    [0][2][3][∞][∞]
+    [2][0][15][2][∞]
+    [3][15][0][0][13]
+    [0][2][∞][∞][9]
+    [0][0][13][9][0]
+}
+```
+
+
+**[ 프림 알고리즘의 개요 ]**<br>
+
+```c
+F = ∅;          // Initialize set of edges to empty.
+Y = {u1};       // Initialize set of vertices to contain only the first one.
+
+while (the instance is not solved){
+    select a vertex in V – Y that is nearest to Y;   // selection procedure
+    add the vertex to Y;
+    add the edge to F;
+
+    if (Y == V)    // solution check
+        the instance is solved;
+}
+```
+
+
+
+<br>
+<br>
+
+### 의사코드 및 실행예시
+
+```c
+void prim (int n,
+           const number W[][],
+           set_of_edges F)
+{
+    index i, k, vnear;
+    number min;
+    edge e;
+    index nearest[2..n];
+    number distance[2..n];
+
+    F = ∅;
+    for (i = 2; i <= n; i++) {
+        nearest[i] = 1;                        // 모든 정점에 대해 u1을 가장 가까운 정점으로 초기화
+        distance[i] = W[1][i];                 // Y에서 i까지의 거리를 가중치로 초기화
+    }
+
+    repeat (n − 1 times) {                    // Y에 n−1개의 정점을 추가
+        min = ∞;
+        for (i = 2; i <= n; i++) {              // 모든 정점에 대해
+            if (0 ≤ distance[i] < min) {      // Y에 포함되지 않은 정점 중 최소 거리 선택
+                min = distance[i];            // 최소값 갱신
+                vnear = i;
+            }
+        }
+
+        e = edge connecting vertices indexed
+            by vnear and nearest[vnear];      // vnear와 가장 가까운 정점을 연결하는 간선 e
+        add e to F;                           // e를 F에 추가
+        distance[vnear] = −1;                 // vnear를 Y에 추가했음을 표시
+
+        for (i = 2; i <= n; i++) {          // Y에 포함되지 않은 정점들에 대해
+            if (W[i][vnear] < distance[i]) {  // vnear를 거쳐가는 거리가 더 짧다면
+                distance[i] = W[i][vnear];    // 거리 갱신
+                nearest[i] = vnear;           // 가장 가까운 정점 갱신
+            }
+        }
+    }
+}
+```
+
+
+
+### 수학적 증명
+
+> 프림 알고리즘은 항상 최소 신장 트리를 생성<br>
+증명: 반복 루프의 각 단계 이후 간선 집합 F가 유망하다는 것을 수학적 귀납법으로 증명
+
+
+**[ 기초 단계 (Induction base) ]**<br>
+> 초기 상태인 공집합 F는 유망
+
+**[ 귀납 가정 (Induction hypothesis) ]**<br>
+> 반복 루프의 어떤 단계 이후, 현재까지 선택된 간선 집합 F가 유망하다고 가정
+
+**[ 귀납 단계 (Induction step) ]**<br>
+> • 다음 단계에서 선택될 간선 e가 F ∪ {e}를 여전히 유망하게 만듦을 보여야 함<br>
+• 선택된 간선 e는 Y와 V - Y를 연결하는 간선 중 가중치가 가장 작은 간선<br>
+• 따라서 F ∪ {e}는 여전히 유망한 최소 신장 트리의 부분 집합<br>
+
+`결론` 반복 루프가 끝난 후의 F는 하나의 최소 신장 트리가 됨
