--- a/_posts/develop/ds_ai/2025-03-23-al5.md
+++ b/_posts/develop/ds_ai/2025-03-23-al5.md
@@ -1,5 +1,5 @@
 ---
-title: "[알고리즘] 분할정복과 탐욕 알고리즘"
+title: "[알고리즘] 분할정복과"
 categories:
   - ds_ai
 tags: [알고리즘]
@@ -12,30 +12,6 @@ sidebar:
 <br>
 <br>
 
-# Greedy Algorithm
-## Greedy 알고리즘의 개념
-**[ 개념 - Local Optimization Approach ]**  
-> 지엽적인 방법을 가고 최적화된(라고 믿는)값을 선택하는 방법
-> • 일련의 선택들을 수행하며, 각 선택은 그 순간 가장 좋아 보이는 것을 선택함  
-> • 각 선택은 **국소적으로 최적**일 수 있으나, **전역적으로 최적**은 아닐 수 있음
-
-**[ 예시: Exchanges Greedy Algorithm ]**
-
-```c
-while (there are more coins and the instance is not solved){
-    grab the largest remaining coin;            // selection procedure
-    if (adding the coin makes the change exceed the amount owed)  // feasibility check
-        reject the coin;
-    else
-        add the coin to the change;
-    if (the total value of the change equals the amount owed)     // solution check
-        the instance is solved;
-}
-```
-
-|최적의 방법|최적이 아닌 방법|
-|---|---|
-|||
 
 <br>
 <br>
