--- a/_posts/develop/ds_ai/2025-03-24-al6.md
+++ b/_posts/develop/ds_ai/2025-03-24-al6.md
@@ -70,21 +70,18 @@ while (the instance is not solved){
 • 간선: 정점들의 쌍들로 구성된 집합, $G$의 간선이라고 부름<br> 
 • 표기: $G = (V, E)$
 
-**` 예시 `**
-![graph1](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1.png)
-• $|E| = 7$, $|V| = 5$
-• 직접적으로 연결된 노드: 이웃
-• 그래프에는 순환은 있어서 트리는 아님
+**`예시`**
 
-$V = {v_1, V_2, V_3, V_4, V_5}$
-$E = {(V_1, V_2), (V_1, V_3), (V_2, V_3), (V_2, V_4), (V3, V_4), (V_3, V_5), (V_4, V_5)}$
+|이미지|설명|
+|:---:|---|
+|![graph1](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1.png)|• $|E| = 7$, $|V| = 5$<br>• 직접적으로 연결된 노드: 이웃<vr>• 그래프에는 순환은 있어서 트리는 아님<br>$V = {v_1, V_2, V_3, V_4, V_5}$<br>$E = {(V_1, V_2), (V_1, V_3), (V_2, V_3), (V_2, V_4), (V3, V_4), (V_3, V_5), (V_4, V_5)}$|
 
 **[ Tree Structure ]**
 > • 그래프에서 일부 엣지를 제거하여 **순환 구조를 없애고** 연결성을 유지한 서브그래프
 > • 트리는 **모든 정점을 포함하고** 사이클이 없는 연결된 구조  
 > • 메시지 전파, 네트워크 연결 등에서 선호됨: 비용이 줄어듦
 
-**` 예시 `**
+**`예시`**
 ![graph2&3](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_2&3.png)
 • (c) 스패닝 트리: weight = 15  
 • (d) 최소 스패닝 트리: weight = 10
