--- a/_posts/develop/ds_ai/2025-03-24-al6.md
+++ b/_posts/develop/ds_ai/2025-03-24-al6.md
@@ -18,8 +18,8 @@ sidebar:
 # Greedy Algorithm
 ## Greedy 알고리즘의 개념
 **[ 개념 - Local Optimization Approach ]**  
-> 지엽적인 방법을 가고 최적화된(라고 믿는)값을 선택하는 방법
-> • 일련의 선택들을 수행하며, 각 선택은 그 순간 가장 좋아 보이는 것을 선택함  
+> 지엽적인 방법을 가고 최적화된(라고 믿는)값을 선택하는 방법<br> 
+> • 일련의 선택들을 수행하며, 각 선택은 그 순간 가장 좋아 보이는 것을 선택함  <br> 
 > • 각 선택은 **국소적으로 최적**일 수 있으나, **전역적으로 최적**은 아닐 수 있음
 
 <br>
@@ -74,11 +74,11 @@ while (the instance is not solved){
 
 |이미지|설명|
 |:---:|---|
-|![graph1](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1.png)|• $|E| = 7$, $|V| = 5$<br>• 직접적으로 연결된 노드: 이웃<vr>• 그래프에는 순환은 있어서 트리는 아님<br>$V = {v_1, V_2, V_3, V_4, V_5}$<br>$E = {(V_1, V_2), (V_1, V_3), (V_2, V_3), (V_2, V_4), (V3, V_4), (V_3, V_5), (V_4, V_5)}$|
+|![graph1](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1.png)|• $|n(E) = 7$, $n(V) = 5$<br>• 직접적으로 연결된 노드: 이웃<br>• 그래프에는 순환은 있어서 트리는 아님<br>$V = {v_1, V_2, V_3, V_4, V_5}$<br>$E = {(V_1, V_2), (V_1, V_3), (V_2, V_3), (V_2, V_4), (V3, V_4), (V_3, V_5), (V_4, V_5)}$|
 
 **[ Tree Structure ]**
-> • 그래프에서 일부 엣지를 제거하여 **순환 구조를 없애고** 연결성을 유지한 서브그래프
-> • 트리는 **모든 정점을 포함하고** 사이클이 없는 연결된 구조  
+> • 그래프에서 일부 엣지를 제거하여 **순환 구조를 없애고** 연결성을 유지한 서브그래프<br> 
+> • 트리는 **모든 정점을 포함하고** 사이클이 없는 연결된 구조  <br> 
 > • 메시지 전파, 네트워크 연결 등에서 선호됨: 비용이 줄어듦
 
 **`예시`**
@@ -88,8 +88,8 @@ while (the instance is not solved){
 
 
 **[ Minimum Spanning Tree ]**
-> 그래프 $G$의 **모든 정점을 포함하고 연결된** 부분 그래프이며 **트리**
-> • 최소 가중치를 갖는 연결된 부분 그래프는 스패닝 트리여야 함
+> 그래프 $G$의 **모든 정점을 포함하고 연결된** 부분 그래프이며 **트리**<br> 
+> • 최소 가중치를 갖는 연결된 부분 그래프는 스패닝 트리여야 함<br> 
 > • 하지만 모든 스패닝 트리가 최소 가중치를 가지는 것은 아님
 
 
@@ -104,16 +104,16 @@ while (the instance is not solved){
 ## Kruskal Algorithm (크루스칼 알고리즘)
 ### Kruskal 알고리즘이란?
 **[ 정의 ]**
-> **최소 신장 트리(MST, Minimum Spanning Tree)**를 구하는 대표적인 **Greedy Algorithm(탐욕 알고리즘)**
-> • **그래프의 모든 정점을 최소한의 간선으로 연결하면서, 전체 간선 가중치의 합이 최소**가 되도록 구성
+> **최소 신장 트리(MST, Minimum Spanning Tree)**를 구하는 대표적인 **Greedy Algorithm(탐욕 알고리즘)**<br> 
+> • **그래프의 모든 정점을 최소한의 간선으로 연결하면서, 전체 간선 가중치의 합이 최소**가 되도록 구성<br> 
 > • Prim 알고리즘과 달리 **간선 중심(edge-based)** 알고리즘
 
 **[ 기본 아이디어 ]**  
-• 가중치가 가장 작은 간선부터 하나씩 선택하면서,  
-• **사이클이 생기지 않도록** 주의하며  
+• 가중치가 가장 작은 간선부터 하나씩 선택하면서,  <br> 
+• **사이클이 생기지 않도록** 주의하며  <br> 
 • $(|V| - 1)$개의 간선을 선택하면 완료
 
-**[ 핵심 도구 ]**
+**[ 핵심 도구 ]**<br> 
 • **Greedy 방식**으로 간선 선택  
 • **Union-Find (Disjoint Set)** 자료구조로 사이클 판단
 
