--- a/_posts/develop/ds_ai/2025-03-24-al6.md
+++ b/_posts/develop/ds_ai/2025-03-24-al6.md
@@ -74,7 +74,7 @@ while (the instance is not solved){
 
 |이미지|설명|
 |:---:|---|
-|![graph1](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1.png)|• $|n(E) = 7$, $n(V) = 5$<br>• 직접적으로 연결된 노드: 이웃<br>• 그래프에는 순환은 있어서 트리는 아님<br>$V = {v_1, V_2, V_3, V_4, V_5}$<br>$E = {(V_1, V_2), (V_1, V_3), (V_2, V_3), (V_2, V_4), (V3, V_4), (V_3, V_5), (V_4, V_5)}$|
+|![graph1](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1.png)|• $n(E) = 7$, $n(V) = 5$<br>• 직접적으로 연결된 노드: 이웃<br>• 그래프에는 순환은 있어서 트리는 아님<br>$V = {v_1, V_2, V_3, V_4, V_5}$<br>$E = {(V_1, V_2), (V_1, V_3), (V_2, V_3), (V_2, V_4), (V3, V_4), (V_3, V_5), (V_4, V_5)}$|
 
 **[ Tree Structure ]**
 > • 그래프에서 일부 엣지를 제거하여 **순환 구조를 없애고** 연결성을 유지한 서브그래프<br> 
@@ -102,18 +102,18 @@ while (the instance is not solved){
 
 
 ## Kruskal Algorithm (크루스칼 알고리즘)
-### Kruskal 알고리즘이란?
-**[ 정의 ]**
+**[ Kruskal 알고리즘이란 ]**<br>
+**`정의`**
 > **최소 신장 트리(MST, Minimum Spanning Tree)**를 구하는 대표적인 **Greedy Algorithm(탐욕 알고리즘)**<br> 
 > • **그래프의 모든 정점을 최소한의 간선으로 연결하면서, 전체 간선 가중치의 합이 최소**가 되도록 구성<br> 
 > • Prim 알고리즘과 달리 **간선 중심(edge-based)** 알고리즘
 
-**[ 기본 아이디어 ]**  
+**`기본 아이디어`**  <br> 
 • 가중치가 가장 작은 간선부터 하나씩 선택하면서,  <br> 
 • **사이클이 생기지 않도록** 주의하며  <br> 
 • $(|V| - 1)$개의 간선을 선택하면 완료
 
-**[ 핵심 도구 ]**<br> 
+**`핵심 도구`**<br> 
 • **Greedy 방식**으로 간선 선택  
 • **Union-Find (Disjoint Set)** 자료구조로 사이클 판단
 
