markdown img test

--- a/_posts/develop/ds_ai/2025-03-24-al6.md
+++ b/_posts/develop/ds_ai/2025-03-24-al6.md
@@ -74,7 +74,9 @@ while (the instance is not solved){
 
 |이미지|설명|
 |:---:|---|
-|![graph1](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1.png)|• $n(E) = 7$, $n(V) = 5$<br>• 직접적으로 연결된 노드: 이웃<br>• 그래프에는 순환은 있어서 트리는 아님<br>$V = {v_1, V_2, V_3, V_4, V_5}$<br>$E = {(V_1, V_2), (V_1, V_3), (V_2, V_3), (V_2, V_4), (V3, V_4), (V_3, V_5), (V_4, V_5)}$|
+|<img src="https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1.png", width="300px">|• $n(E) = 7$, $n(V) = 5$<br>• 직접적으로 연결된 노드: 이웃<br>• 그래프에는 순환은 있어서 트리는 아님<br>$V = {v_1, V_2, V_3, V_4, V_5}$<br>$E = {(V_1, V_2), (V_1, V_3), (V_2, V_3), (V_2, V_4), (V3, V_4), (V_3, V_5), (V_4, V_5)}$|
+
+<br>
 
 **[ Tree Structure ]**
 > • 그래프에서 일부 엣지를 제거하여 **순환 구조를 없애고** 연결성을 유지한 서브그래프<br> 
